--- a/style.css
+++ b/style.css
@@ -1,4 +1,28 @@
-#bg-navbar{
-    background-color: blueviolet;
+footer{
+    width: 100%;
+    height: 100px;
+    background-color: darkslateblue;
+    color: white;
     
+}
+#texto-img-principal{
+    display: flex;
+    position: relative;
+    top: 600px;
+    left: 800px;;
+
+}
+#titulo-img-principal{
+    display: flex;
+    position: relative;
+    top: 600px;
+    left: 800px;;
+
+}
+#btn-img-principal{
+    display: flex;
+    position: relative;
+    top: 600px;
+    left: 800px;;
+
 }
